[gd_scene load_steps=4 format=3 uid="uid://7277kp7mtnon"]

[ext_resource type="Script" path="res://6Buttons.gd" id="1_j6d3r"]
[ext_resource type="PackedScene" uid="uid://gyo7x6cmcfk2" path="res://timer.tscn" id="2_ufc6q"]
[ext_resource type="Texture2D" uid="uid://cb6w4dmovcmcu" path="res://SquareTexture.png" id="3_fqhmi"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_j6d3r")

[node name="Timer" parent="." instance=ExtResource("2_ufc6q")]
position = Vector2(576, 550)

[node name="LeftLower" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_top = 50.0
offset_right = 122.0
offset_bottom = 158.0
metadata/_edit_use_anchors_ = true

[node name="red" type="TextureButton" parent="LeftLower"]
visible = false
modulate = Color(1, 0, 0, 1)
layout_mode = 0
offset_left = 150.0
offset_top = 274.0
offset_right = 250.0
offset_bottom = 374.0
scale = Vector2(1.5, 1.5)
pivot_offset = Vector2(50, 50)
texture_normal = ExtResource("3_fqhmi")

[node name="blue" type="TextureButton" parent="LeftLower"]
visible = false
modulate = Color(0, 0, 1, 1)
layout_mode = 0
offset_left = 150.0
offset_top = 274.0
offset_right = 250.0
offset_bottom = 374.0
scale = Vector2(1.5, 1.5)
pivot_offset = Vector2(50, 50)
texture_normal = ExtResource("3_fqhmi")

[node name="green" type="TextureButton" parent="LeftLower"]
visible = false
modulate = Color(0, 1, 0, 1)
layout_mode = 0
offset_left = 150.0
offset_top = 274.0
offset_right = 250.0
offset_bottom = 374.0
scale = Vector2(1.5, 1.5)
pivot_offset = Vector2(50, 50)
texture_normal = ExtResource("3_fqhmi")

[node name="yellow" type="TextureButton" parent="LeftLower"]
visible = false
modulate = Color(1, 1, 0, 1)
layout_mode = 0
offset_left = 150.0
offset_top = 274.0
offset_right = 250.0
offset_bottom = 374.0
scale = Vector2(1.5, 1.5)
pivot_offset = Vector2(50, 50)
texture_normal = ExtResource("3_fqhmi")

[node name="Cyan" type="TextureButton" parent="LeftLower"]
visible = false
modulate = Color(0, 1, 1, 1)
layout_mode = 0
offset_left = 150.0
offset_top = 274.0
offset_right = 250.0
offset_bottom = 374.0
scale = Vector2(1.5, 1.5)
pivot_offset = Vector2(50, 50)
texture_normal = ExtResource("3_fqhmi")

[node name="Magenta" type="TextureButton" parent="LeftLower"]
visible = false
modulate = Color(1, 0, 1, 1)
layout_mode = 0
offset_left = 150.0
offset_top = 274.0
offset_right = 250.0
offset_bottom = 374.0
scale = Vector2(1.5, 1.5)
pivot_offset = Vector2(50, 50)
texture_normal = ExtResource("3_fqhmi")

[node name="MiddleLower" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_top = 50.0
offset_right = 40.0
offset_bottom = 90.0
metadata/_edit_use_anchors_ = true

[node name="red" type="TextureButton" parent="MiddleLower"]
visible = false
modulate = Color(1, 0, 0, 1)
layout_mode = 0
offset_left = 526.0
offset_top = 274.0
offset_right = 626.0
offset_bottom = 374.0
scale = Vector2(1.5, 1.5)
pivot_offset = Vector2(50, 50)
texture_normal = ExtResource("3_fqhmi")

[node name="blue" type="TextureButton" parent="MiddleLower"]
visible = false
modulate = Color(0, 0, 1, 1)
layout_mode = 0
offset_left = 526.0
offset_top = 274.0
offset_right = 626.0
offset_bottom = 374.0
scale = Vector2(1.5, 1.5)
pivot_offset = Vector2(50, 50)
texture_normal = ExtResource("3_fqhmi")

[node name="green" type="TextureButton" parent="MiddleLower"]
visible = false
modulate = Color(0, 1, 0, 1)
layout_mode = 0
offset_left = 526.0
offset_top = 274.0
offset_right = 626.0
offset_bottom = 374.0
scale = Vector2(1.5, 1.5)
pivot_offset = Vector2(50, 50)
texture_normal = ExtResource("3_fqhmi")

[node name="yellow" type="TextureButton" parent="MiddleLower"]
visible = false
modulate = Color(1, 1, 0, 1)
layout_mode = 0
offset_left = 526.0
offset_top = 274.0
offset_right = 626.0
offset_bottom = 374.0
scale = Vector2(1.5, 1.5)
pivot_offset = Vector2(50, 50)
texture_normal = ExtResource("3_fqhmi")

[node name="Cyan" type="TextureButton" parent="MiddleLower"]
visible = false
modulate = Color(0, 1, 1, 1)
layout_mode = 0
offset_left = 526.0
offset_top = 274.0
offset_right = 626.0
offset_bottom = 374.0
scale = Vector2(1.5, 1.5)
pivot_offset = Vector2(50, 50)
texture_normal = ExtResource("3_fqhmi")

[node name="Magenta" type="TextureButton" parent="MiddleLower"]
visible = false
modulate = Color(1, 0, 1, 1)
layout_mode = 0
offset_left = 526.0
offset_top = 274.0
offset_right = 626.0
offset_bottom = 374.0
scale = Vector2(1.5, 1.5)
pivot_offset = Vector2(50, 50)
texture_normal = ExtResource("3_fqhmi")

[node name="RightLower" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_top = 50.0
offset_right = 40.0
offset_bottom = 90.0
metadata/_edit_use_anchors_ = true

[node name="red" type="TextureButton" parent="RightLower"]
visible = false
modulate = Color(1, 0, 0, 1)
layout_mode = 0
offset_left = 900.0
offset_top = 274.0
offset_right = 1000.0
offset_bottom = 374.0
scale = Vector2(1.5, 1.5)
pivot_offset = Vector2(50, 50)
texture_normal = ExtResource("3_fqhmi")

[node name="blue" type="TextureButton" parent="RightLower"]
visible = false
modulate = Color(0, 0, 1, 1)
layout_mode = 0
offset_left = 900.0
offset_top = 274.0
offset_right = 1000.0
offset_bottom = 374.0
scale = Vector2(1.5, 1.5)
pivot_offset = Vector2(50, 50)
texture_normal = ExtResource("3_fqhmi")

[node name="green" type="TextureButton" parent="RightLower"]
visible = false
modulate = Color(0, 1, 0, 1)
layout_mode = 0
offset_left = 900.0
offset_top = 274.0
offset_right = 1000.0
offset_bottom = 374.0
scale = Vector2(1.5, 1.5)
pivot_offset = Vector2(50, 50)
texture_normal = ExtResource("3_fqhmi")

[node name="yellow" type="TextureButton" parent="RightLower"]
visible = false
modulate = Color(1, 1, 0, 1)
layout_mode = 0
offset_left = 900.0
offset_top = 274.0
offset_right = 1000.0
offset_bottom = 374.0
scale = Vector2(1.5, 1.5)
pivot_offset = Vector2(50, 50)
texture_normal = ExtResource("3_fqhmi")

[node name="Cyan" type="TextureButton" parent="RightLower"]
visible = false
modulate = Color(0, 1, 1, 1)
layout_mode = 0
offset_left = 900.0
offset_top = 274.0
offset_right = 1000.0
offset_bottom = 374.0
scale = Vector2(1.5, 1.5)
pivot_offset = Vector2(50, 50)
texture_normal = ExtResource("3_fqhmi")

[node name="Magenta" type="TextureButton" parent="RightLower"]
visible = false
modulate = Color(1, 0, 1, 1)
layout_mode = 0
offset_left = 900.0
offset_top = 274.0
offset_right = 1000.0
offset_bottom = 374.0
scale = Vector2(1.5, 1.5)
pivot_offset = Vector2(50, 50)
texture_normal = ExtResource("3_fqhmi")

[node name="LeftUpper" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_top = -200.0
offset_right = 122.0
offset_bottom = -92.0
metadata/_edit_use_anchors_ = true

[node name="red" type="TextureButton" parent="LeftUpper"]
visible = false
modulate = Color(1, 0, 0, 1)
layout_mode = 0
offset_left = 150.0
offset_top = 274.0
offset_right = 250.0
offset_bottom = 374.0
scale = Vector2(1.5, 1.5)
pivot_offset = Vector2(50, 50)
texture_normal = ExtResource("3_fqhmi")

[node name="blue" type="TextureButton" parent="LeftUpper"]
visible = false
modulate = Color(0, 0, 1, 1)
layout_mode = 0
offset_left = 150.0
offset_top = 274.0
offset_right = 250.0
offset_bottom = 374.0
scale = Vector2(1.5, 1.5)
pivot_offset = Vector2(50, 50)
texture_normal = ExtResource("3_fqhmi")

[node name="green" type="TextureButton" parent="LeftUpper"]
visible = false
modulate = Color(0, 1, 0, 1)
layout_mode = 0
offset_left = 150.0
offset_top = 274.0
offset_right = 250.0
offset_bottom = 374.0
scale = Vector2(1.5, 1.5)
pivot_offset = Vector2(50, 50)
texture_normal = ExtResource("3_fqhmi")

[node name="yellow" type="TextureButton" parent="LeftUpper"]
visible = false
modulate = Color(1, 1, 0, 1)
layout_mode = 0
offset_left = 150.0
offset_top = 274.0
offset_right = 250.0
offset_bottom = 374.0
scale = Vector2(1.5, 1.5)
pivot_offset = Vector2(50, 50)
texture_normal = ExtResource("3_fqhmi")

[node name="Cyan" type="TextureButton" parent="LeftUpper"]
visible = false
modulate = Color(0, 1, 1, 1)
layout_mode = 0
offset_left = 150.0
offset_top = 274.0
offset_right = 250.0
offset_bottom = 374.0
scale = Vector2(1.5, 1.5)
pivot_offset = Vector2(50, 50)
texture_normal = ExtResource("3_fqhmi")

[node name="Magenta" type="TextureButton" parent="LeftUpper"]
visible = false
modulate = Color(1, 0, 1, 1)
layout_mode = 0
offset_left = 150.0
offset_top = 274.0
offset_right = 250.0
offset_bottom = 374.0
scale = Vector2(1.5, 1.5)
pivot_offset = Vector2(50, 50)
texture_normal = ExtResource("3_fqhmi")

[node name="MiddleUpper" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_top = -200.0
offset_right = 40.0
offset_bottom = -160.0
metadata/_edit_use_anchors_ = true

[node name="red" type="TextureButton" parent="MiddleUpper"]
visible = false
modulate = Color(1, 0, 0, 1)
layout_mode = 0
offset_left = 526.0
offset_top = 274.0
offset_right = 626.0
offset_bottom = 374.0
scale = Vector2(1.5, 1.5)
pivot_offset = Vector2(50, 50)
texture_normal = ExtResource("3_fqhmi")

[node name="blue" type="TextureButton" parent="MiddleUpper"]
visible = false
modulate = Color(0, 0, 1, 1)
layout_mode = 0
offset_left = 526.0
offset_top = 274.0
offset_right = 626.0
offset_bottom = 374.0
scale = Vector2(1.5, 1.5)
pivot_offset = Vector2(50, 50)
texture_normal = ExtResource("3_fqhmi")

[node name="green" type="TextureButton" parent="MiddleUpper"]
visible = false
modulate = Color(0, 1, 0, 1)
layout_mode = 0
offset_left = 526.0
offset_top = 274.0
offset_right = 626.0
offset_bottom = 374.0
scale = Vector2(1.5, 1.5)
pivot_offset = Vector2(50, 50)
texture_normal = ExtResource("3_fqhmi")

[node name="yellow" type="TextureButton" parent="MiddleUpper"]
visible = false
modulate = Color(1, 1, 0, 1)
layout_mode = 0
offset_left = 526.0
offset_top = 274.0
offset_right = 626.0
offset_bottom = 374.0
scale = Vector2(1.5, 1.5)
pivot_offset = Vector2(50, 50)
texture_normal = ExtResource("3_fqhmi")

[node name="Cyan" type="TextureButton" parent="MiddleUpper"]
visible = false
modulate = Color(0, 1, 1, 1)
layout_mode = 0
offset_left = 526.0
offset_top = 274.0
offset_right = 626.0
offset_bottom = 374.0
scale = Vector2(1.5, 1.5)
pivot_offset = Vector2(50, 50)
texture_normal = ExtResource("3_fqhmi")

[node name="Magenta" type="TextureButton" parent="MiddleUpper"]
visible = false
modulate = Color(1, 0, 1, 1)
layout_mode = 0
offset_left = 526.0
offset_top = 274.0
offset_right = 626.0
offset_bottom = 374.0
scale = Vector2(1.5, 1.5)
pivot_offset = Vector2(50, 50)
texture_normal = ExtResource("3_fqhmi")

[node name="RightUpper" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_top = -200.0
offset_right = 40.0
offset_bottom = -160.0
metadata/_edit_use_anchors_ = true

[node name="red" type="TextureButton" parent="RightUpper"]
visible = false
modulate = Color(1, 0, 0, 1)
layout_mode = 0
offset_left = 900.0
offset_top = 274.0
offset_right = 1000.0
offset_bottom = 374.0
scale = Vector2(1.5, 1.5)
pivot_offset = Vector2(50, 50)
texture_normal = ExtResource("3_fqhmi")

[node name="blue" type="TextureButton" parent="RightUpper"]
visible = false
modulate = Color(0, 0, 1, 1)
layout_mode = 0
offset_left = 900.0
offset_top = 274.0
offset_right = 1000.0
offset_bottom = 374.0
scale = Vector2(1.5, 1.5)
pivot_offset = Vector2(50, 50)
texture_normal = ExtResource("3_fqhmi")

[node name="green" type="TextureButton" parent="RightUpper"]
visible = false
modulate = Color(0, 1, 0, 1)
layout_mode = 0
offset_left = 900.0
offset_top = 274.0
offset_right = 1000.0
offset_bottom = 374.0
scale = Vector2(1.5, 1.5)
pivot_offset = Vector2(50, 50)
texture_normal = ExtResource("3_fqhmi")

[node name="yellow" type="TextureButton" parent="RightUpper"]
visible = false
modulate = Color(1, 1, 0, 1)
layout_mode = 0
offset_left = 900.0
offset_top = 274.0
offset_right = 1000.0
offset_bottom = 374.0
scale = Vector2(1.5, 1.5)
pivot_offset = Vector2(50, 50)
texture_normal = ExtResource("3_fqhmi")

[node name="Cyan" type="TextureButton" parent="RightUpper"]
visible = false
modulate = Color(0, 1, 1, 1)
layout_mode = 0
offset_left = 900.0
offset_top = 274.0
offset_right = 1000.0
offset_bottom = 374.0
scale = Vector2(1.5, 1.5)
pivot_offset = Vector2(50, 50)
texture_normal = ExtResource("3_fqhmi")

[node name="Magenta" type="TextureButton" parent="RightUpper"]
visible = false
modulate = Color(1, 0, 1, 1)
layout_mode = 0
offset_left = 900.0
offset_top = 274.0
offset_right = 1000.0
offset_bottom = 374.0
scale = Vector2(1.5, 1.5)
pivot_offset = Vector2(50, 50)
texture_normal = ExtResource("3_fqhmi")

[node name="Background" type="Sprite2D" parent="."]
modulate = Color(0, 0, 0, 1)
z_index = -10
z_as_relative = false
position = Vector2(567.389, 333.775)
scale = Vector2(12, 7)
texture = ExtResource("3_fqhmi")

[connection signal="button_down" from="LeftLower/red" to="." method="_on_red_button_down"]
[connection signal="button_down" from="LeftLower/blue" to="." method="_on_blue_button_down"]
[connection signal="button_down" from="LeftLower/green" to="." method="_on_green_button_down"]
[connection signal="button_down" from="LeftLower/yellow" to="." method="_on_yellow_button_down"]
[connection signal="button_down" from="LeftLower/Cyan" to="." method="_on_cyan_button_down"]
[connection signal="button_down" from="LeftLower/Magenta" to="." method="_on_magenta_button_down"]
[connection signal="button_down" from="MiddleLower/red" to="." method="_on_red_button_down"]
[connection signal="button_down" from="MiddleLower/blue" to="." method="_on_blue_button_down"]
[connection signal="button_down" from="MiddleLower/green" to="." method="_on_green_button_down"]
[connection signal="button_down" from="MiddleLower/yellow" to="." method="_on_yellow_button_down"]
[connection signal="button_down" from="MiddleLower/Cyan" to="." method="_on_cyan_button_down"]
[connection signal="button_down" from="MiddleLower/Magenta" to="." method="_on_magenta_button_down"]
[connection signal="button_down" from="RightLower/red" to="." method="_on_red_button_down"]
[connection signal="button_down" from="RightLower/blue" to="." method="_on_blue_button_down"]
[connection signal="button_down" from="RightLower/green" to="." method="_on_green_button_down"]
[connection signal="button_down" from="RightLower/yellow" to="." method="_on_yellow_button_down"]
[connection signal="button_down" from="RightLower/Cyan" to="." method="_on_cyan_button_down"]
[connection signal="button_down" from="RightLower/Magenta" to="." method="_on_magenta_button_down"]
[connection signal="button_down" from="LeftUpper/red" to="." method="_on_red_button_down"]
[connection signal="button_down" from="LeftUpper/blue" to="." method="_on_blue_button_down"]
[connection signal="button_down" from="LeftUpper/green" to="." method="_on_green_button_down"]
[connection signal="button_down" from="LeftUpper/yellow" to="." method="_on_yellow_button_down"]
[connection signal="button_down" from="LeftUpper/Cyan" to="." method="_on_cyan_button_down"]
[connection signal="button_down" from="LeftUpper/Magenta" to="." method="_on_magenta_button_down"]
[connection signal="button_down" from="MiddleUpper/red" to="." method="_on_red_button_down"]
[connection signal="button_down" from="MiddleUpper/blue" to="." method="_on_blue_button_down"]
[connection signal="button_down" from="MiddleUpper/green" to="." method="_on_green_button_down"]
[connection signal="button_down" from="MiddleUpper/yellow" to="." method="_on_yellow_button_down"]
[connection signal="button_down" from="MiddleUpper/Cyan" to="." method="_on_cyan_button_down"]
[connection signal="button_down" from="MiddleUpper/Magenta" to="." method="_on_magenta_button_down"]
[connection signal="button_down" from="RightUpper/red" to="." method="_on_red_button_down"]
[connection signal="button_down" from="RightUpper/blue" to="." method="_on_blue_button_down"]
[connection signal="button_down" from="RightUpper/green" to="." method="_on_green_button_down"]
[connection signal="button_down" from="RightUpper/yellow" to="." method="_on_yellow_button_down"]
[connection signal="button_down" from="RightUpper/Cyan" to="." method="_on_cyan_button_down"]
[connection signal="button_down" from="RightUpper/Magenta" to="." method="_on_magenta_button_down"]
